nodemailer and other features

--- a/backend/.env
+++ b/backend/.env
@@ -13,6 +13,10 @@ CLOUDINARY_NAME = 'dqjrmcagt'
 CLOUDINARY_API_KEY = '683686277143579'
 CLOUDINARY_SECRET_KEY = 'ysDJaYL7xUVCF31LkhLd_4HqrHE'
 
+APP_EMAIL = 'irfaankarwanta@gmail.com'
+APP_PASSWORD = 'acpp dgde wpfg swid'
+
+
 # Razorpay Payment Integration
 RAZORPAY_KEY_ID = "------ Razorpay Key Id here ------"
 RAZORPAY_KEY_SECRET = "------ Razorpay Key Secret here ------"
