users list and block account add

--- a/backend/.env
+++ b/backend/.env
@@ -13,8 +13,8 @@ CLOUDINARY_NAME = 'dqjrmcagt'
 CLOUDINARY_API_KEY = '683686277143579'
 CLOUDINARY_SECRET_KEY = 'ysDJaYL7xUVCF31LkhLd_4HqrHE'
 
-APP_EMAIL = 'irfaankarwanta@gmail.com'
-APP_PASSWORD = 'acpp dgde wpfg swid'
+APP_EMAIL = 'clinica.manila.supp@gmail.com'
+APP_PASSWORD = 'jdre zead ydpr hrhx'
 
 
 # Razorpay Payment Integration
