--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,8 @@
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.15.1"
