adding reset password for patients

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,9 @@
 CURRENCY = "PHP"
 JWT_SECRET = 'rithviksighakolli'
 
+# Frontend URL
+FRONTEND_URL = 'https://clinica-manila.vercel.app'
+
 # Admin Panel Credentials
 ADMIN_EMAIL = "admin@cm"
 ADMIN_PASSWORD = "1234"
